--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,18 @@ excludes=
 file.reference.commons-lang-2.6.jar=G:\\programlar\\java\\UCanAccess-4.0.2-bin\\UCanAccess-4.0.2-bin\\lib\\commons-lang-2.6.jar
 file.reference.commons-logging-1.1.1.jar=G:\\programlar\\java\\UCanAccess-4.0.2-bin\\UCanAccess-4.0.2-bin\\lib\\commons-logging-1.1.1.jar
 file.reference.hsqldb.jar=G:\\programlar\\java\\UCanAccess-4.0.2-bin\\UCanAccess-4.0.2-bin\\lib\\hsqldb.jar
+file.reference.itext5-itext-pdfa-5.5.12-javadoc.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itext-pdfa-5.5.12-javadoc.jar
+file.reference.itext5-itext-pdfa-5.5.12-sources.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itext-pdfa-5.5.12-sources.jar
+file.reference.itext5-itext-pdfa-5.5.12.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itext-pdfa-5.5.12.jar
+file.reference.itext5-itext-xtra-5.5.12-javadoc.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itext-xtra-5.5.12-javadoc.jar
+file.reference.itext5-itext-xtra-5.5.12-sources.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itext-xtra-5.5.12-sources.jar
+file.reference.itext5-itext-xtra-5.5.12.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itext-xtra-5.5.12.jar
+file.reference.itext5-itextpdf-5.5.12-javadoc.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itextpdf-5.5.12-javadoc.jar
+file.reference.itext5-itextpdf-5.5.12-sources.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itextpdf-5.5.12-sources.jar
+file.reference.itext5-itextpdf-5.5.12.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-itextpdf-5.5.12.jar
+file.reference.itext5-xmlworker-5.5.12-javadoc.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-xmlworker-5.5.12-javadoc.jar
+file.reference.itext5-xmlworker-5.5.12-sources.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-xmlworker-5.5.12-sources.jar
+file.reference.itext5-xmlworker-5.5.12.jar=G:\\programlar\\java\\itext5-5.5.12\\itext5-xmlworker-5.5.12.jar
 file.reference.jackcess-2.1.6.jar=G:\\programlar\\java\\UCanAccess-4.0.2-bin\\UCanAccess-4.0.2-bin\\lib\\jackcess-2.1.6.jar
 file.reference.ucanaccess-4.0.2.jar=G:\\programlar\\java\\UCanAccess-4.0.2-bin\\UCanAccess-4.0.2-bin\\ucanaccess-4.0.2.jar
 includes=**
@@ -41,7 +53,19 @@ javac.classpath=\
     ${file.reference.jackcess-2.1.6.jar}:\
     ${file.reference.ucanaccess-4.0.2.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.itext5-itext-pdfa-5.5.12-javadoc.jar}:\
+    ${file.reference.itext5-itext-pdfa-5.5.12-sources.jar}:\
+    ${file.reference.itext5-itext-pdfa-5.5.12.jar}:\
+    ${file.reference.itext5-itext-xtra-5.5.12-javadoc.jar}:\
+    ${file.reference.itext5-itext-xtra-5.5.12-sources.jar}:\
+    ${file.reference.itext5-itext-xtra-5.5.12.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12-javadoc.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12-sources.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}:\
+    ${file.reference.itext5-xmlworker-5.5.12-javadoc.jar}:\
+    ${file.reference.itext5-xmlworker-5.5.12-sources.jar}:\
+    ${file.reference.itext5-xmlworker-5.5.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
