--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BilsemEtkinlik
+application.vendor=serkancam
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +28,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/BilsemEtkinlik.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-lang-2.6.jar=kutuphaneler\\UCanAccess-4.0.2-bin\\UCanAccess-4.0.2-bin\\lib\\commons-lang-2.6.jar
 file.reference.commons-logging-1.1.1.jar=kutuphaneler\\UCanAccess-4.0.2-bin\\UCanAccess-4.0.2-bin\\lib\\commons-logging-1.1.1.jar
@@ -91,7 +94,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.BilsemEtkinlik.GUI.SiniflaraEtkinlikAta
+main.class=com.BilsemEtkinlik.GUI.AnaForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
